# webagentaudit

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.test  Dockerfile.test.dockerignore  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
docs/: custom-probes.md  index.html
docs/detection/: ai-disclaimers.html  docs-ai-panel.html  full-page-chat.html  generic-chatbot.html  intercom-widget.html  multi-provider.html  script-analysis.html  sdk-embed.html
docs/interactive/: ambiguous-buttons.html  ambiguous-saas.html  delayed-response-llm.html  echo-llm.html  iframe-chat-widget.html  iframe-chat.html  response-failure-llm.html  reverse-llm.html  safe-llm.html  submission-failure-llm.html  trigger-panel-llm.html  vulnerable-llm.html
docs/negative/: contact-form.html  ecommerce.html  search-only.html  simple-blog.html
docs/shared/: echo-engine.js  style.css
kb/: _index.md
kb/architecture/: _index.md  assessment.md  core.md  crawl_scope.md  detection.md  known_assets.md  link_analysis.md  llm_channel.md  overview.md
kb/domain/: _index.md  llm_attack_categories.md  llm_detection_techniques.md  llm_interface_analysis.md  llm_vendor_registry.md
kb/patterns/: _index.md  channel_interface.md  detection_signals.md  probe_system.md
kb/reference_projects/: _index.md  agentseal.md  garak.md  promptfoo.md
scripts/: collect_all.py  collect_page.py  known_llm_pages.py
src/webagentaudit/: __init__.py
src/webllm/: __init__.py
tests/: README.md  conftest.py
tests/assessment/: test_assessor_concurrent.py  test_builtin_probes.py  test_canary.py  test_detector_evidence_browser.py  test_models.py  test_pattern_detector.py  test_probe_validation.py  test_yaml_loader.py
tests/cli/: test_app.py
tests/core/: test_models.py
tests/detection/: test_ai_indicators.py  test_detector.py  test_dom_patterns.py  test_known_assets.py  test_known_signatures.py  test_network_hints.py  test_script_analysis.py  test_selector_matching.py
tests/e2e/: conftest.py  test_assessment_e2e.py  test_auto_discovery_e2e.py  test_cli_e2e.py  test_detection_e2e.py  test_discovery_regressions.py  test_page_data_collection.py
tests/fixtures/: _manifest.md  chatbase_delayed_bootstrap.html  chatbase_widget.html  collision_resistant_probe.html  crisp_crisp.html  custom_chatbot_chatwoot.html  custom_chatbot_freshdesk.html  custom_chatbot_helpscout.html  custom_chatbot_hubspot.html  custom_chatbot_livechat.html  custom_chatbot_olark.html  tidio_tidio.html  (+12 more)
(+157 files in other folders)
