[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webllm"
version = "0.1.0"
description = "Detection and security assessment of interactive LLMs on webpages"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.5.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "playwright>=1.40.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/webllm"]
